# codeOS

./: .gitignore  CMakeLists.txt  README.md
lab3/: CMakeLists.txt
lab5/include/: http_server.h
lab5/src/: http_server.cpp  main.cpp  simulator.cpp
lab5/web/: index.html  package-lock.json  package.json
lab5/web/src/: App.tsx
lab5/web/src/components/: LineChart.tsx
lab6/: CMakeLists.txt  README.md
lab6/src/: ApiClient.cpp  MainWindow.cpp  main.cpp
lab6/src/frontend/: ApiClient.cpp
lab7/src/frontend/: MainWindow.cpp
scripts/: build_linux.sh  build_windows.cmd
